--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.app-frame {
+  margin: 5%;
+  padding: 30px;
+  width: calc(80vw);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#666));
+}
+
+.customers-actions {
+  background: #AAA;
+  padding: 10px;
+  margin: 10px;
+}
+
+.customers-actions button {
+  background: white;
+  min-width: 100px;
+  height: 30px;
+  margin: 5px;
+}
