--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,11 @@ code {
   height: 30px;
   margin: 5px;
 }
+
+.customers-list-item .field {
+  width: 160px;
+  margin: 1px;
+  padding: 4px;
+  background: #EEE;
+  display: inline-block;
+}
